* Removes baseCSS and duplication of css when importing * Composes utils from global rather than an import

--- a/src/component/Avatar.sass
+++ b/src/component/Avatar.sass
@@ -1,7 +1,7 @@
 @import '../styles/_vars.scss';
 
 .avatar {
-  composes: u-block u-paddingAN u-textCenter from '../styles/utils.scss';
+  composes: u-block u-paddingAN u-textCenter from global;
   border-radius: 50%;
   border: #{2/$font-size}rem solid $zd-color-gainsboro;
   background-color: $zd-color-white;
