--- a/src/component/chat/Chat.sass
+++ b/src/component/chat/Chat.sass
@@ -5,9 +5,9 @@
 }
 
 .header {
-  composes: u-marginBM from '../../styles/utils.scss';
+  composes: u-marginBM from global;
 }
 
 .chatEnd {
-  composes: u-textCenter from '../../styles/utils.scss';
+  composes: u-textCenter from global;
 }
