--- a/src/component/chat/ChatBox.sass
+++ b/src/component/chat/ChatBox.sass
@@ -1,11 +1,11 @@
 @import '../../styles/_vars.scss';
 
 .input {
-  composes: u-inlineBlock u-marginRS u-alignBottom from '../../styles/utils.scss';
+  composes: u-inlineBlock u-marginRS u-alignBottom from global;
   width: #{210/$font-size}rem;
 }
 
 .button {
-  composes: u-inlineBlock from '../../styles/utils.scss';
+  composes: u-inlineBlock from global;
 }
 
