--- a/src/component/chat/ChatMessage.sass
+++ b/src/component/chat/ChatMessage.sass
@@ -1,22 +1,22 @@
 @import '../../styles/_vars.scss';
 
 .wrapper {
-  composes: u-cf u-block from '../../styles/utils.scss';
+  composes: u-cf u-block from global;
 }
 
 .message {
-  composes: u-paddingS u-marginBS from '../../styles/utils.scss';
+  composes: u-paddingS u-marginBS from global;
 }
 
 .messageUser {
-  composes: u-pullRight from '../../styles/utils.scss';
+  composes: u-pullRight from global;
 }
 
 .messageAgent {
-  composes: u-pullLeft from '../../styles/utils.scss';
+  composes: u-pullLeft from global;
 }
 
 .name {
-  composes: u-textBold from '../../styles/utils.scss';
+  composes: u-textBold from global;
   color: $zd-color-dark-gray;
 }
