--- a/src/component/frame/Frame.sass
+++ b/src/component/frame/Frame.sass
@@ -1,13 +1,13 @@
 @import '../../styles/_vars.scss';
 
 .desktop {
-  composes: u-borderTransparent u-posRelative u-noPrint from '../../styles/utils.scss';
+  composes: u-borderTransparent u-posRelative u-noPrint from global;
 }
 
 .left {
-  composes: u-pullLeft from '../../styles/utils.scss';
+  composes: u-pullLeft from global;
 }
 
 .right {
-  composes: u-pullRight from '../../styles/utils.scss';
+  composes: u-pullRight from global;
 }
