--- a/src/component/helpCenter/HelpCenterDesktop.sass
+++ b/src/component/helpCenter/HelpCenterDesktop.sass
@@ -1,20 +1,20 @@
 .form {
-  composes: u-cf from '../../styles/utils.scss';
+  composes: u-cf from global;
   composes: Form from '../../styles/components/Form.scss';
 }
 
 .buttonContainer {
-  composes: u-posRelative from '../../styles/utils.scss';
+  composes: u-posRelative from global;
 }
 
 .footer {
-  composes: u-paddingVN from '../../styles/utils.scss';
+  composes: u-paddingVN from global;
 }
 
 .footerLogo {
-  composes: u-paddingVL from '../../styles/utils.scss';
+  composes: u-paddingVL from global;
 }
 
 .footerArticleView {
-  composes: u-paddingTT from '../../styles/utils.scss';
+  composes: u-paddingTT from global;
 }
