--- a/src/component/helpCenter/HelpCenterResults.sass
+++ b/src/component/helpCenter/HelpCenterResults.sass
@@ -23,32 +23,32 @@
 }
 
 .listMobile {
-  composes: u-marginBS from '../../styles/utils.scss';
+  composes: u-marginBS from global;
   padding: #{8/$font-size}rem 0 0 #{24/$font-size}rem;
 }
 
 .itemMobile {
-  composes: u-textSizeBaseMobile from '../../styles/utils.scss';
+  composes: u-textSizeBaseMobile from global;
 }
 
 .listBottom {
-  composes: u-paddingBL from '../../styles/utils.scss';
+  composes: u-paddingBL from global;
 }
 
 .listBottomViewMore {
-  composes: u-paddingBM from '../../styles/utils.scss';
+  composes: u-paddingBM from global;
 }
 
 .resultsBorder {
-  composes: u-borderBottom from '../../styles/utils.scss';
+  composes: u-borderBottom from global;
 }
 
 .resultsPadding {
-  composes: u-paddingBL from '../../styles/utils.scss';
+  composes: u-paddingBL from global;
 }
 
 .noResults {
-  composes: u-marginTM u-textCenter u-textSizeMed from '../../styles/utils.scss';
+  composes: u-marginTM u-textCenter u-textSizeMed from global;
 }
 
 .noResultsDesktop {
@@ -56,37 +56,37 @@
 }
 
 .noResultsMobile {
-  composes: u-textSizeBaseMobile from '../../styles/utils.scss';
+  composes: u-textSizeBaseMobile from global;
 }
 
 .noResultsBorder {
-  composes: u-borderBottom from '../../styles/utils.scss';
+  composes: u-borderBottom from global;
 }
 
 .noResultsParagraph {
-  composes: u-textSecondary from '../../styles/utils.scss';
+  composes: u-textSecondary from global;
 }
 
 .noResultsParagraphDesktop {
-  composes: u-marginBL from '../../styles/utils.scss';
+  composes: u-marginBL from global;
 }
 
 .viewMore {
-  composes: u-cf from '../../styles/utils.scss';
+  composes: u-cf from global;
 }
 
 .viewMoreRTL {
-  composes: u-pullRight from '../../styles/utils.scss';
+  composes: u-pullRight from global;
 }
 
 .legend {
-  composes: u-paddingTT u-textSizeNml Arrange Arrange--middle u-textBody u-textBold from '../../styles/utils.scss';
+  composes: u-paddingTT u-textSizeNml Arrange Arrange--middle u-textBody u-textBold from global;
 }
 
 .legendContent {
-  composes: Arrange-sizeFill from '../../styles/utils.scss';
+  composes: Arrange-sizeFill from global;
 }
 
 .legendMobile {
-  composes: u-textSizeBaseMobile from '../../styles/utils.scss';
+  composes: u-textSizeBaseMobile from global;
 }
