--- a/src/component/chat/MessageBubble.sass
+++ b/src/component/chat/MessageBubble.sass
@@ -1,7 +1,7 @@
 @import '../../styles/_vars.scss';
 
 .messageBubble {
-  composes: u-paddingAS from '../../styles/utils.scss';
+  composes: u-paddingAS from global;
   border-radius: #{8/$font-size}rem;
   line-height: 1.5;
   max-width: #{230/$font-size}rem;
