--- a/src/component/field/Checkbox.sass
+++ b/src/component/field/Checkbox.sass
@@ -1,12 +1,12 @@
 @import '../../styles/_vars.scss';
 
 .checkboxContainer {
-  composes: u-hsizeAll from '../../styles/utils.scss';
+  composes: u-hsizeAll from global;
   display: inline-block;
 }
 
 .checkbox {
-  composes: u-posRelative u-pullLeft u-marginRS u-isActionable from '../../styles/utils.scss';
+  composes: u-posRelative u-pullLeft u-marginRS u-isActionable from global;
 
   width: #{14/$font-size}rem;
   height: #{14/$font-size}rem;
@@ -23,7 +23,7 @@
 }
 
 .label {
-  composes: u-textBold u-nbfc u-pullLeft u-isActionable u-block from '../../styles/utils.scss';
+  composes: u-textBold u-nbfc u-pullLeft u-isActionable u-block from global;
 
   color: $zd-color-monsoon;
 
@@ -33,11 +33,11 @@
 }
 
 .checkmarkUnchecked {
-  composes: u-isHiddenVisually from '../../styles/utils.scss';
+  composes: u-isHiddenVisually from global;
 }
 
 .input {
-  composes: u-isHiddenVisually from '../../styles/utils.scss';
+  composes: u-isHiddenVisually from global;
 
   width: #{14/$font-size}rem;
   height: #{14/$font-size}rem;
@@ -54,15 +54,15 @@
 
 .field {
   composes: Form-field Form-field--clean from '../../styles/components/Form.scss';
-  composes: u-isSelectable u-posRelative u-flex u-flexAlignItemsBase from '../../styles/utils.scss';
+  composes: u-isSelectable u-posRelative u-flex u-flexAlignItemsBase from global;
 }
 
 .container {
   composes: Form-fieldContainer from '../../styles/components/Form.scss';
-  composes: u-block from '../../styles/utils.scss';
+  composes: u-block from global;
 }
 
 .description {
   composes: Form-description from '../../styles/components/Form.scss';
-  composes: u-textAluminum from '../../styles/utils.scss';
+  composes: u-textAluminum from global;
 }
