--- a/src/component/helpCenter/HelpCenterArticle.sass
+++ b/src/component/helpCenter/HelpCenterArticle.sass
@@ -1,15 +1,15 @@
 @import '../../styles/_vars.scss';
 
 .title {
-  composes: u-textSizeLrg u-marginBT u-textBold u-textBody from '../../styles/utils.scss';
+  composes: u-textSizeLrg u-marginBT u-textBold u-textBody from global;
 }
 
 .originalArticleButton {
-  composes: u-marginBM from '../../styles/utils.scss';
+  composes: u-marginBM from global;
 }
 
 .link {
-  composes: u-linkClean from '../../styles/utils.scss';
+  composes: u-linkClean from global;
 }
 
 .content {
@@ -30,5 +30,5 @@
 }
 
 .article {
-  composes: u-marginTM from '../../styles/utils.scss';
+  composes: u-marginTM from global;
 }
