--- a/src/component/channelChoice/ChannelChoice.sass
+++ b/src/component/channelChoice/ChannelChoice.sass
@@ -11,7 +11,7 @@
   border-bottom: #{1/$font-size}rem solid $zd-color-gainsboro !important;
   // ie hacks
   color: $zd-color-gainsboro;
-  min-height: 0px;
+  min-height: 0;
 }
 
 .inner {
