--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -257,6 +257,11 @@ u-overflowAuto {
   padding-right: $spacing-sml !important;
 }
 
+.u-paddingHM {
+  padding-left: $spacing-med !important;
+  padding-right: $spacing-med !important;
+}
+
 .u-paddingHL {
   padding-left: $spacing-lrg !important;
   padding-right: $spacing-lrg !important;
