more style comments addressed

--- a/src/component/channelChoice/ChannelChoicePopupMobile.sass
+++ b/src/component/channelChoice/ChannelChoicePopupMobile.sass
@@ -1,7 +1,7 @@
 @import '../../styles/_vars.scss';
 
 .inner {
-  composes: u-paddingVS u-paddingHM from '../../styles/utils.scss';
+  composes: u-paddingVS u-paddingHM from global;
 }
 
 .innerItem {
@@ -13,9 +13,9 @@
 }
 
 .buttonContainer {
-  composes: u-posRelative u-marginTT u-paddingHM u-paddingBM from '../../styles/utils.scss';
+  composes: u-posRelative u-marginTT u-paddingHM u-paddingBM from global;
 }
 
 .cancelButton {
-  composes: u-textSizeMed from '../../styles/utils.scss';
+  composes: u-textSizeMed from global;
 }
