--- a/src/component/helpCenter/HelpCenterMobile.sass
+++ b/src/component/helpCenter/HelpCenterMobile.sass
@@ -40,9 +40,8 @@
 }
 
 .channelChoiceContainer {
-  position: absolute;
+  composes: u-posAbsolute u-hsizeAll from global;
   bottom: 0;
-  width: 100%;
-  box-shadow: 0px #{-2/$font-size}rem #{4/$font-size}rem 0px rgba(51,51,51,0.33);
-  background: #FFFFFF;
+  box-shadow: 0 #{-2/$font-size}rem #{4/$font-size}rem 0 rgba(51,51,51,0.33);
+  background-color: $zd-color-white;
 }
