i18n cancel label; composing from global

--- a/src/component/channelChoice/ChannelChoicePopupMobile.sass
+++ b/src/component/channelChoice/ChannelChoicePopupMobile.sass
@@ -9,7 +9,7 @@
 }
 
 .innerItemLabel {
-  composes: u-textSizeMed from '../../styles/utils.scss' !important;
+  composes: u-textSizeMed from global !important;
 }
 
 .buttonContainer {
