Formatting style variables

--- a/src/component/button/ButtonIcon.sass
+++ b/src/component/button/ButtonIcon.sass
@@ -13,11 +13,11 @@
   }
 }
 
-.container--ie {
+.containerIE {
   composes: u-paddingBXL from global;
 }
 
-.container--actionable {
+.containerActionable {
   composes: u-isActionable from global;
 }
 
