Update styles based on Mandy's feedback

--- a/src/component/button/ButtonIcon.sass
+++ b/src/component/button/ButtonIcon.sass
@@ -2,7 +2,7 @@
 
 .container {
   composes: Button--icon from '../../styles/components/Button.scss';
-  composes: u-flex u-isDisabled from global;
+  composes: u-flex u-flexAlignItemsCenter u-isDisabled from global;
 
   &:hover, &:focus, &:active {
     color: $zd-color-oil;
