--- a/src/component/button/ButtonIcon.sass
+++ b/src/component/button/ButtonIcon.sass
@@ -28,6 +28,11 @@
   svg path {
     fill: $zd-color-monsoon;
   }
+
+  [dir='rtl'] & {
+    padding-right: 0 !important;
+    padding-left: #{15/$font-size}rem !important;
+  }
 }
 
 .label {
