--- a/src/component/channelChoice/ChannelChoicePopupMobile.sass
+++ b/src/component/channelChoice/ChannelChoicePopupMobile.sass
@@ -1,10 +1,13 @@
 @import '../../styles/_vars.scss';
 
 .inner {
-  composes: u-paddingBS u-paddingHM from global;
+  composes: u-paddingVS u-paddingHM from global;
 }
 
 .innerItem {
+  padding-top: #{8/$font-size}rem;
+  padding-bottom: #{8/$font-size}rem;
+
   &:hover, &:focus, &:active {
     color: $zd-color-oil;
 
