--- a/src/component/channelChoice/ChannelChoiceDesktop.sass
+++ b/src/component/channelChoice/ChannelChoiceDesktop.sass
@@ -22,3 +22,9 @@
   padding-top: #{10/$font-size}rem !important; /* 1 */
   padding-bottom: 0 !important; /* 1 */
 }
+
+.container {
+  padding-top: #{10/$font-size}rem !important; /* 1 */
+  padding-left: 0 !important; /* 1 */
+  padding-right: 0 !important; /* 1 */
+}
