--- a/src/styles/components/Container.scss
+++ b/src/styles/components/Container.scss
@@ -98,8 +98,18 @@ $Container-spacing: 25/$font-size;
   border-radius: #{4/$font-size}rem;
   box-shadow: 0 0 #{6/$font-size}rem 0 rgba($base-shadow, .2);
 
+  //transition: all 100ms ease-in-out;
+  animation-name: example;
+  animation-duration: 100ms;
+  animation-timing-function: ease-in-out;
+
   [dir='rtl'] & {
     right: auto;
     left: 0;
   }
+}
+
+@keyframes example {
+    from {opacity: 0;}
+    to {opacity: 1;}
 }
