Fix up css styles and rename some things to make more sense

--- a/src/component/channelChoice/ChannelChoiceDesktop.sass
+++ b/src/component/channelChoice/ChannelChoiceDesktop.sass
@@ -1,5 +1,5 @@
 /**
- * 1. Composes classes on Container and ScrollContainer come
+ * 1. Composed classes on Container and ScrollContainer come
  *    later in the class atrribute, so they will override
  *    composed classes defined here.
  */
