--- a/src/component/button/Button.sass
+++ b/src/component/button/Button.sass
@@ -1,19 +1,24 @@
+/**
+ * 1. Need to specify again to override c-btn-primary
+ */
+
 @import '../../styles/_vars.scss';
 
 .button {
   composes: c-btn c-btn--medium Anim-color u-textNoWrap from global;
 }
 
-.primary {
+.filled {
   composes: c-btn--primary u-borderTransparent u-userBackgroundColor from global;
 }
 
-.notPrimary {
+.outline {
   composes: u-userBorderColor from global;
 }
 
 .mobile {
-  composes: is-mobile u-sizeFull u-textSizeBaseMobile from global;
+  composes: u-sizeFull u-textSizeBaseMobile u-textTruncate from global;
 
   line-height: 2.5;
+  max-width: 100%; /* 1 */
 }
