--- a/src/component/channelChoice/ChannelChoiceMobile.sass
+++ b/src/component/channelChoice/ChannelChoiceMobile.sass
@@ -1,13 +1,12 @@
 /**
- * 1. Composes classes on Container and ScrollContainer come
+ * 1. Composed classes on Container and ScrollContainer come
  *    later in the class atrribute, so they will override
  *    composed classes defined here.
  */
 
- @import '../../styles/_vars.scss';
-
 .container {
   height: calc(100% - 10rem);
+
   padding-left: 0 !important; /* 1 */
   padding-right: 0 !important; /* 1 */
 }
