--- a/src/component/button/Button.sass
+++ b/src/component/button/Button.sass
@@ -12,7 +12,7 @@
   composes: c-btn--primary u-borderTransparent u-userBackgroundColor from global;
 }
 
-.outline {
+.outlined {
   composes: u-userBorderColor from global;
 }
 
