--- a/src/component/helpCenter/HelpCenterMobile.sass
+++ b/src/component/helpCenter/HelpCenterMobile.sass
@@ -44,4 +44,16 @@
   bottom: 0;
   box-shadow: 0 #{-2/$font-size}rem #{8/$font-size}rem 0 rgba(51,51,51,0.2);
   background-color: $zd-color-white;
+  animation: channelChoiceAppear 100ms ease-in-out;
+}
+
+@keyframes channelChoiceAppear {
+  from {
+    opacity: 0;
+    bottom: #{-155/$font-size}rem
+  }
+  to {
+    opacity: 1;
+    bottom: 0;
+  }
 }
