Use zd-color-shamrock for background alpha

--- a/src/component/attachment/Attachment.sass
+++ b/src/component/attachment/Attachment.sass
@@ -41,7 +41,7 @@
   composes: u-zIndex1 u-vsizeAll u-posAbsolute u-posStart--flush u-posStart--vertFlush from global;
 
   border-radius: #{4/$font-size}rem;
-  background-color: rgba(69, 217, 123, 0.15);
+  background-color: rgba($zd-color-shamrock, 0.15);
 }
 
 .title {
