Use zd version of paperclip icons

--- a/src/component/attachment/AttachmentBox.sass
+++ b/src/component/attachment/AttachmentBox.sass
@@ -12,7 +12,7 @@
 }
 
 .dropzoneActive {
-  composes: u-textBold u-userFillColor from global;
+  composes: u-textBold u-userTextColor from global;
   composes: Anim-color from '../../styles/components/Animation.scss';
 }
 
