--- a/src/styles/components/Icon.scss
+++ b/src/styles/components/Icon.scss
@@ -130,11 +130,11 @@
   padding-right: #{5/$font-size}rem;
 
   svg {
-    fill: $icon-inactive-color;
     min-width: #{16/$font-size}rem; /* 1 */
     min-height: #{16/$font-size}rem; /* 1 */
     height: #{16/$font-size}rem;
     width: #{16/$font-size}rem;
+    transform: rotate(45deg) scaleX(-1);
   }
 }
 
@@ -142,11 +142,11 @@
   padding-right: 0;
 
   svg {
-    fill: $icon-inactive-color;
     min-width: #{36/$font-size}rem; /* 1 */
     min-height: #{36/$font-size}rem; /* 1 */
     height: #{36/$font-size}rem;
     width: #{36/$font-size}rem;
+    transform: rotate(45deg) scaleX(-1);
   }
 }
 
