Add a buttonRating component

--- a/src/component/Avatar.sass
+++ b/src/component/Avatar.sass
@@ -3,8 +3,8 @@
 .avatar {
   composes: u-block u-paddingAN u-textCenter from global;
   border-radius: 50%;
-  border: #{2/$font-size}rem solid $zd-color-gainsboro;
+  border: #{1/$font-size}rem solid $zd-color-iron;
   background-color: $zd-color-white;
-  height: #{45/$font-size}rem;
-  width: #{45/$font-size}rem;
+  height: #{32/$font-size}rem;
+  width: #{32/$font-size}rem;
 }
