--- a/src/styles/components/Icon.scss
+++ b/src/styles/components/Icon.scss
@@ -231,18 +231,15 @@
   box-sizing: border-box;
 
   svg {
-    fill: $cta-color;
+    fill: $zd-color-monsoon;
     color: #999;
-    min-width: #{26/$font-size}rem; /* 1 */
-    min-height: #{26/$font-size}rem; /* 1 */
-    height: #{26/$font-size}rem;
-    width: #{26/$font-size}rem;
-    padding: 0;
+    min-width: #{15/$font-size}rem; /* 1 */
+    min-height: #{15/$font-size}rem; /* 1 */
+    height: #{15/$font-size}rem;
+    width: #{15/$font-size}rem;
+    padding: #{7/$font-size}rem 0 0;
     display: inline-block;
     position: relative;
-    top: 50%;
-    margin-top: -#{14/$font-size}rem;
-    margin-left: -#{1/$font-size}rem;
   }
 }
 
