Use render method pattern and fix format

--- a/src/component/chat/ChatHeader.sass
+++ b/src/component/chat/ChatHeader.sass
@@ -52,7 +52,7 @@
 }
 
 .ratingIconActive {
-  border: #{1/$font-size}rem solid $zd-color-gainsboro;
+  border: #{1/$font-size}rem solid $zd-color-gainsboro !important;
   border-radius: #{4/$font-size}rem;
   background-color: $zd-color-platinum;
 
