Remove constructor from chatHeader test and cleanup refs

--- a/src/component/chat/ChatHeader.sass
+++ b/src/component/chat/ChatHeader.sass
@@ -45,7 +45,7 @@
 }
 
 .thumbDownIcon {
-  @extend .ratingIcon;
+  composes: ratingIcon;
 
   padding-top: #{7/$font-size}rem;
   padding-bottom: #{5/$font-size}rem;
