Ensure the chatbox footer is on the bottom on mobile and fix a few minor issues

--- a/src/component/chat/Chat.sass
+++ b/src/component/chat/Chat.sass
@@ -1,5 +1,10 @@
 @import '../../styles/_vars.scss';
 
+.containerMobile {
+  height: calc(100% - #{150/$font-size}rem);
+  max-height: #{480/$font-size}rem;
+}
+
 .messages {
   margin-top: #{70/$font-size}rem;
 }
