Add a ChatFooter component with the Icon for chat menu

--- a/src/styles/components/Icon.scss
+++ b/src/styles/components/Icon.scss
@@ -260,6 +260,26 @@
   }
 }
 
+.Icon--ellipsis {
+  padding-right: 0;
+
+  svg {
+    border-radius: #{4/$font-size}rem;
+
+    g {
+      fill: $zd-color-aluminum !important;
+    }
+
+    &:hover, &:active, &:focus {
+      background: $zd-color-platinum;
+
+      g {
+        fill: $zd-color-dark-gray !important;
+      }
+    }
+  }
+}
+
 .Icon--preview {
   padding-right: #{8/$font-size}rem;
   margin-top: #{4/$font-size}rem;
