use rem for scrollbar width

--- a/src/component/chat/ChatBox.sass
+++ b/src/component/chat/ChatBox.sass
@@ -16,13 +16,12 @@
     }
 
     &::-webkit-scrollbar {
-      margin-right: 2px;
-      width: 4px;
+      width: #{4/$font-size}rem;
     }
 
     &::-webkit-scrollbar-thumb {
       background: $base-border-color;
-      border-radius: 2px;
+      border-radius: #{4/$font-size}rem;
     }
   }
 }
