Update designs with Mandy, change Icons to a nicer one

--- a/src/component/chat/ChatFooter.sass
+++ b/src/component/chat/ChatFooter.sass
@@ -1,12 +1,7 @@
 @import '../../styles/_vars.scss';
 
-.container {
-  // composes: u-flex u-flexAlignItemsCenter u-posStart--flush u-posAbsolute u-hsizeAll from global;
-
-}
-
 .icons {
   composes: u-pullRight from global;
 
-  margin: #{5/$font-size}rem;
+  margin-bottom: #{8/$font-size}rem;
 }
