--- a/src/component/chat/ChatMenu.sass
+++ b/src/component/chat/ChatMenu.sass
@@ -7,8 +7,8 @@
   bottom: #{20/$font-size}rem;
   right: 0;
   margin: #{10/$font-size}rem;
-  width: calc(100% - #{28/$font-size}rem);
-  padding: #{4/$font-size}rem;
+  width: calc(100% - #{38/$font-size}rem);
+  padding: #{9/$font-size}rem;
   border-radius: #{4/$font-size}rem;
   box-shadow: 0 0 #{6/$font-size}rem 0 rgba($base-shadow, .2);
 }
@@ -19,6 +19,6 @@
 
   &:hover, &:active, &:focus {
     color: $zd-color-oil;
-    background: $zd-color-platinum;
+    background: $zd-color-white-smoke;
   }
 }
