--- a/src/styles/components/Icon.scss
+++ b/src/styles/components/Icon.scss
@@ -264,7 +264,13 @@
   padding-right: 0;
 
   svg {
+    padding: #{5/$font-size}rem;
     border-radius: #{4/$font-size}rem;
+
+    min-width: #{14/$font-size}rem;
+    min-height: #{14/$font-size}rem;
+    width: #{14/$font-size}rem;
+    height: #{14/$font-size}rem;
 
     g {
       fill: $zd-color-aluminum !important;
