Style messageBubble and elements surrounding it

--- a/src/component/chat/ChatMessage.sass
+++ b/src/component/chat/ChatMessage.sass
@@ -14,9 +14,9 @@
 
 .messageAgent {
   composes: u-pullLeft from global;
+  color: $zd-color-black;
 }
 
 .name {
-  composes: u-textBold from global;
-  color: $zd-color-dark-gray;
+  color: $zd-color-aluminum !important;
 }
