Render messageBubble with avatar and name in the appropriate positions

--- a/src/component/chat/ChatMessage.sass
+++ b/src/component/chat/ChatMessage.sass
@@ -18,5 +18,20 @@
 }
 
 .name {
+  margin-left: #{40/$font-size}rem;
   color: $zd-color-aluminum !important;
+}
+
+.avatar {
+  display: inline-block !important;
+  height: #{35/$font-size}rem;
+  width: #{35/$font-size}rem;
+}
+
+.messageBubble {
+  margin-left: #{40/$font-size}rem;
+}
+
+.messageBubbleAvatar {
+  composes: u-marginLT u-alignTop from global;
 }
