--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -188,6 +188,10 @@ u-overflowAuto {
   margin-right: $spacing-lrg !important;
 }
 
+.u-marginLT {
+  margin-left: $spacing-tny !important;
+}
+
 .u-marginLS {
   margin-left: $spacing-sml !important;
 }
