Update chatMessage test

--- a/src/component/chat/ChatMessage.sass
+++ b/src/component/chat/ChatMessage.sass
@@ -29,6 +29,7 @@
   width: #{31/$font-size}rem;
 
   svg {
+    padding-top: #{8/$font-size}rem;
     padding-left: #{0.5/$font-size}rem;
     min-width: #{13/$font-size}rem;
     min-height: #{13/$font-size}rem;
