--- a/src/component/chat/ChatMenu.sass
+++ b/src/component/chat/ChatMenu.sass
@@ -1,12 +1,10 @@
 @import '../../styles/_vars.scss';
 
 .container {
-  composes: u-posAbsolute from global;
+  composes: u-posAbsolute u-marginAS u-posEnd--flush from global;
 
   background-color: $base-color;
   bottom: #{20/$font-size}rem;
-  right: 0;
-  margin: #{10/$font-size}rem;
   width: calc(100% - #{20/$font-size}rem);
   padding: #{4/$font-size}rem 0;
   border-radius: #{4/$font-size}rem;
