Remove userColor and extract CSS values into their own files

--- a/src/component/chat/ChatMessage.sass
+++ b/src/component/chat/ChatMessage.sass
@@ -10,11 +10,20 @@
 
 .messageUser {
   composes: u-pullRight from global;
+  color: $zd-color-white;
+}
+
+.userBackground {
+  composes: u-userBackgroundColor from global;
 }
 
 .messageAgent {
   composes: u-pullLeft from global;
   color: $zd-color-black;
+}
+
+.agentBackground {
+  background: $zd-color-anti-flash-white;
 }
 
 .name {
