Fix up merge errors

--- a/src/component/chat/Chat.sass
+++ b/src/component/chat/Chat.sass
@@ -5,8 +5,12 @@
   max-height: #{500/$font-size}rem;
 }
 
+.prechatContainer {
+  max-height: #{480/$font-size}rem;
+}
+
 .scrollContainer {
-  height: calc(100% - #{130/$font-size}rem);
+  height: calc(100% - #{138/$font-size}rem);
 }
 
 .scrollContainerMobile {
